tests/ui/attributes/z-crate-attr/unbalanced-paren.stderr
error: this file contains an unclosed delimiter
  --> <crate attribute>:1:2
   |
LL | (
   | -^
   | |
   | unclosed delimiter

error: aborting due to 1 previous error

