tests/ui/attributes/z-crate-attr/unbalanced-paren.rs
// Show diagnostics for unbalanced parens.
//@ compile-flags: -Zcrate-attr=(
//@ error-pattern:unclosed delimiter
fn main() {}
